--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -1,11 +1,12 @@
 [supervisord]
-logfile = /var/www/app/log/supervisord.log
+user=www-data
+logfile = /tmp/supervisord.log
+pidfile = /tmp/supervisord.pid
 logfile_maxbytes = 50MB
 logfile_backups=10
 loglevel = info
-pidfile = /var/www/app/run/supervisord.pid
 nodaemon = true
 childlogdir = /var/www/app/log
 
 [include]
-files=/etc/supervisor/conf.d/*.conf
+files=/etc/supervisor/conf.d/%(ENV_APP_ENVIRONMENT)s/*.conf
