--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 app/log
 app/migrations
-app/run
 app/settings/prod.py
 app/static
-dockerfiles
+dockerfiles/pgdata
+dockerfiles/profiler
+dockerfiles/redis
+dockerfiles/rabbitmq
+dockerfiles/mail
 *.pyc
