login_manager;admin_login

--- a/supervisor/conf.d/DEVELOPMENT/flask_app.conf
+++ b/supervisor/conf.d/DEVELOPMENT/flask_app.conf
@@ -3,6 +3,10 @@ command = python app.py
 directory = /var/www/app
 autostart = true
 autorestart = true
-startretries = 1
+startretries= 1000
+stopsignal=TERM
+stopwaitsecs=10
+stopasgroup=false
+killasgroup=false
 redirect_stderr = true
 stdout_logfile = /tmp/flask_app.log
