--- a/supervisor/conf.d/DEVELOPMENT/celery_app.conf
+++ b/supervisor/conf.d/DEVELOPMENT/celery_app.conf
@@ -3,6 +3,10 @@ command = celery worker -A run_celery.celery -B -s /tmp/celerybeat-schedule
 directory = /var/www/app
 autostart = true
 autorestart = true
-startretries = 1
+startretries= 1000
+stopsignal=TERM
+stopwaitsecs=10
+stopasgroup=false
+killasgroup=false
 redirect_stderr = true
 stdout_logfile = /tmp/celery_app.log
