--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -7,5 +7,13 @@ logfile_backups=10
 loglevel = info
 nodaemon = true
 
+[supervisorctl]
+serverurl=unix:///tmp/supervisord.sock
+
+[unix_http_server]
+file=/tmp/supervisord.sock
+chmod=0755
+chown=www-data:www-data
+
 [include]
 files=/etc/supervisor/conf.d/%(ENV_APP_ENVIRONMENT)s/*.conf
