--- a/supervisor/conf.d/DEVELOPMENT/flask_app.conf
+++ b/supervisor/conf.d/DEVELOPMENT/flask_app.conf
@@ -1,5 +1,5 @@
 [program:flask_app]
-command = python app.py
+command = python manage.py runserver
 directory = /var/www/app
 autostart = true
 autorestart = true
