celery app fixed

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -16,4 +16,4 @@ chmod=0755
 chown=www-data:www-data
 
 [include]
-files=/etc/supervisor/conf.d/%(ENV_APP_ENVIRONMENT)s/flask_app.conf
+files=/etc/supervisor/conf.d/%(ENV_APP_ENVIRONMENT)s/*.conf
