--- a/supervisor/conf.d/DEVELOPMENT/celery_app.conf
+++ b/supervisor/conf.d/DEVELOPMENT/celery_app.conf
@@ -1,5 +1,5 @@
 [program:celery_app]
-command = celery worker -A tasks.celery -B -s /tmp/celerybeat-schedule
+command = celery worker -A tasks.celeryapp -B -s /tmp/celerybeat-schedule
 directory = /var/www/app
 autostart = true
 autorestart = true
