--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-app/log
 app/migrations
 app/settings/prod.py
 app/static
+dockerfiles/logs
 dockerfiles/pgdata
-dockerfiles/profiler
 dockerfiles/redis
 dockerfiles/rabbitmq
 dockerfiles/mail
