postfix deleted; supervisor configs changed

--- a/supervisor/conf.d/DEVELOPMENT/celery_app.conf
+++ b/supervisor/conf.d/DEVELOPMENT/celery_app.conf
@@ -1,9 +1,9 @@
 [program:celery_app]
-command = celery worker -A tasks.celeryapp -B -s /tmp/celerybeat-schedule
+command = celery worker -A tasks.celeryapp -B -s /tmp/celerybeat-schedule --loglevel=INFO
 directory = /var/www/app
 autostart = true
 autorestart = true
-startretries= 1000
+startretries= 1
 stopsignal=TERM
 stopwaitsecs=10
 stopasgroup=false
