--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -1,19 +1,16 @@
+[unix_http_server]
+file=/var/run//supervisor.sock
+chmod=0700
+
 [supervisord]
-user=www-data
-logfile = /tmp/supervisord.log
-pidfile = /tmp/supervisord.pid
-logfile_maxbytes = 50MB
-logfile_backups=10
-loglevel = info
-nodaemon = true
+logfile=/tmp/supervisord.log
+pidfile=/var/run/supervisord.pid
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///tmp/supervisord.sock
-
-[unix_http_server]
-file=/tmp/supervisord.sock
-chmod=0755
-chown=www-data:www-data
+serverurl=unix:///var/run//supervisor.sock ; use a unix:// URL  for a unix socket
 
 [include]
-files=/etc/supervisor/conf.d/%(ENV_APP_ENVIRONMENT)s/*.conf
+files = /etc/supervisor/conf.d/%(ENV_APP_ENVIRONMENT)s/*.conf
