--- a/circle.yml
+++ b/circle.yml
@@ -4,10 +4,13 @@ machine:
 
 dependencies:
   override:
-    - sudo pip install -U docker-compose
+    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+    - sudo pip install --upgrade docker-compose==1.3.0
 
 test:
-  override:
-    - docker-compose build flaskapp
+  pre:
+    - docker-compose pull
     - docker-compose up -d
+  override:
+    - docker exec -it dockerflask_flaskapp_1 bash -c "python manage.py runtests"
     - docker-compose stop && docker-compose rm -f
