supervisord rpc added

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -10,6 +10,9 @@ nodaemon = true
 [supervisorctl]
 serverurl=unix:///tmp/supervisord.sock
 
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [unix_http_server]
 file=/tmp/supervisord.sock
 chmod=0755
