circle.yml changed

--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,5 @@ test:
     - docker-compose pull
     - docker-compose up -d
   override:
-    - docker-compose run flaskapp bash -c "python manage.py runtests"
+    - docker-compose run flaskapp bash -c "python manage.py test"
     - docker-compose stop
